Add text formating

--- a/MyPackages/commands.sty
+++ b/MyPackages/commands.sty
@@ -23,3 +23,5 @@
 \newcommand{\rmnum}[1]{\romannumeral #1}
 \newcommand{\Rmnum}[1]{\expandafter\@slowromancap\romannumeral #1@}
 \makeatother
+\usepackage[lmargin=25mm,rmargin=25mm,tmargin=25mm,bmargin=30mm]{geometry}
+\usepackage[onehalfspacing]{setspace}
