--- a/MyPackages/ptvstyle.sty
+++ b/MyPackages/ptvstyle.sty
@@ -2,7 +2,7 @@
 \ProvidesPackage{ptvstyle}
                 [2010/04/02 v0.1]
 \usepackage{indentfirst}
-\usepackage[margin=2cm]{geometry}
+%\usepackage[margin=2cm]{geometry}
 \usepackage[intlimits,sumlimits]{amsmath}
 \usepackage{amssymb,amsthm}
 \usepackage[utf8]{inputenc}
